--- a/index.html
+++ b/index.html
@@ -539,6 +539,7 @@ p.subtitle-section {
     transition: border-color 0.3s ease;
     outline: none;
     box-sizing: border-box; /* Учитываем padding и border */
+    resize: none; 
 }
 
 .modal-content input:focus, 
@@ -608,7 +609,7 @@ p.subtitle-section {
     <div class="hero-text">
       <h1>WineLock: простой способ сохранения вина</h1>
       <p>Откройте для себя уникальный WineLock, инновационное решение, разработанное для защиты подлинности и свежести ваших лучших вин.</p>
-      <a href="#" id="order-btn">Order Now</a>
+      <a href="#" id="order-btn">Заказать</a>
     </div>
   </section>
   
