--- a/index.html
+++ b/index.html
@@ -335,9 +335,12 @@ p.subtitle-section {
 }
 
 @media (max-width: 768px) {
-    .features-grid {
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(4, 1fr);
+  .features-grid {
+        grid-template-columns: repeat(2, 1fr); /* Разделение контента на 2 столбца */
+        grid-template-rows: repeat(auto-fit, 1fr);
+        gap: 10px;
+        justify-items: center; /* Выровнять элементы по центру */
+        align-items: stretch; /* Растягивание элементов по высоте */
     }
 
     .features-grid::before,
@@ -611,13 +614,13 @@ p.subtitle-section {
 /* Мобильные стили */
 /* Мобильные стили */
 @media (max-width: 768px) {
-    /* Заголовок и текст в блоке "Как работает WineLock?" */
+    /* Стили для заголовков и текста */
     .title-section {
-        font-size: 2rem !important; /* Уменьшенный размер заголовка для мобильных */
+        font-size: 2rem !important; /* Уменьшенный размер заголовка */
     }
 
     .subtitle-section {
-        font-size: 1rem !important; /* Уменьшенный размер текста для мобильных */
+        font-size: 1rem !important; /* Уменьшенный размер текста */
     }
 
     /* Стили для хедера */
@@ -725,7 +728,7 @@ p.subtitle-section {
         font-size: 0.9rem;
     }
 
-    /* Галерея (карусель) для мобильных устройств */
+    /* Галерея для мобильных устройств */
     .gallery-container {
         overflow: hidden;
         padding: 0 20px;
@@ -758,77 +761,22 @@ p.subtitle-section {
         object-fit: cover; /* Это свойство поможет избежать растяжения */
     }
 
-    /* Размер текста в карусели */
     .gallery-item-text {
         position: absolute;
         bottom: 10px;
         left: 0;
         right: 0;
-        background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон для улучшения читаемости текста */
+        background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон */
         color: #fff;
         padding: 10px;
         text-align: center;
-        font-size: 1rem; /* Размер шрифта для текста в блоках карусели */
-    }
-
-    .gallery-item-text h3 {
-        margin-bottom: 5px;
-        font-size: 1.2rem; /* Изменяем размер заголовков в карусели */
-        font-weight: bold;
-    }
-
-    .gallery-item-text p {
         font-size: 1rem;
-        margin: 0;
-        line-height: 1.4;
-    }
-
-    .gallery-control {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: rgba(0, 0, 0, 0.5);
-        color: white;
-        border: none;
-        padding: 0.5rem 1rem;
-        cursor: pointer;
-        font-size: 1.5rem;
-        transition: background-color 0.3s;
-        z-index: 10;
-    }
-
-    .gallery-control.prev {
-        left: 10px;
-    }
-
-    .gallery-control.next {
-        right: 10px;
-    }
-
-    .gallery-control:hover {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-
-    .gallery-item.blur {
-        filter: none;
-        opacity: 1;
-    }
-
-    /* Убираем лишнее смещение, если оно есть */
-    .gallery-wrapper {
-        transform: none;
     }
 
     /* Секции с заголовками */
     section h2 {
         font-size: 2rem;
         margin-bottom: 1rem;
-    }
-
-    /* Текст в параграфах */
-    p {
-        font-size: 1rem;
-        margin-bottom: 1.5rem;
     }
 
     /* Блок "Технические характеристики" */
@@ -849,15 +797,59 @@ p.subtitle-section {
         font-size: 2rem !important; /* Уменьшенный размер заголовка */
     }
 
+    /* 1. Возвращаем горизонтальные и вертикальные линии */
+    .features-grid::before,
+    .features-grid::after {
+        display: block;
+        position: absolute;
+        background-color: #ccc;
+    }
+
+    /* Горизонтальная линия */
+    .features-grid::before {
+        top: 50%;
+        left: 0;
+        right: 0;
+        height: 1px;
+        background-color: #ccc;
+    }
+
+    /* Вертикальная линия */
+    .features-grid::after {
+        top: 0;
+        bottom: 0;
+        left: 50%;
+        width: 1px;
+        background-color: #ccc;
+    }
+
+    /* 2. Настраиваем сетку для мобильных устройств */
+    .features-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 0;
+        justify-items: center;
+        align-items: center;
+        position: relative;
+    }
+
+    /* 3. Корректировка отступов и размеров текста */
+    .feature-item {
+        padding: 1rem;
+        text-align: center;
+    }
+
     .feature-item h3 {
-        font-size: 1rem !important; /* Уменьшенный размер заголовков */
+        font-size: 1rem;
     }
 
     .feature-item p {
-        font-size: 0.9rem !important; /* Уменьшенный размер текста */
+        font-size: 0.8rem;
+        line-height: 1.3;
     }
 
-    /* Блок "Возможности для вашего бизнеса" */
+    /* Блок "Возможности для бизнеса" */
     #business-opportunities h2 {
         font-size: 2rem !important; /* Уменьшенный размер заголовка */
     }
@@ -870,7 +862,7 @@ p.subtitle-section {
         font-size: 0.9rem !important; /* Уменьшенный размер текста */
     }
 
-    /* Текст в галереях и карточках */
+    /* Текст в карточках и галереях */
     .gallery-item-text h3,
     .feature-item h3,
     .spec-text h3,
@@ -882,7 +874,7 @@ p.subtitle-section {
     .feature-item p,
     .spec-text p,
     .opportunity-item p {
-        font-size: 1rem;
+        font-size: 0.9rem;
     }
 
     /* Модальное окно */
@@ -901,14 +893,15 @@ p.subtitle-section {
         padding: 0.75rem 1.5rem;
     }
 
-    /* Обновление для блоков "Преимущества" и "Возможности для вашего бизнеса" */
+    /* Блок "Преимущества" и "Возможности для бизнеса" */
     .features-grid,
     .opportunities-container {
-        grid-template-columns: repeat(2, 1fr); /* Разделение контента на 2 столбца */
+        grid-template-columns: repeat(2, 1fr); /* 2 столбца */
         grid-template-rows: repeat(auto-fit, 1fr);
         gap: 10px;
     }
 }
+
 
 
 
