--- a/index.html
+++ b/index.html
@@ -895,12 +895,9 @@ p.subtitle-section {
     }
 
     /* Блок "Преимущества" и "Возможности для бизнеса" */
-    .features-grid,
-    .opportunities-container {
-        grid-template-columns: repeat(2, 1fr); /* 2 столбца */
-        grid-template-rows: repeat(auto-fit, 1fr);
-        gap: 10px;
-    }
+    .opportunity-item {
+    margin-bottom: 5px; 
+  }
 }
 
 
