--- a/index.html
+++ b/index.html
@@ -729,12 +729,16 @@ p.subtitle-section {
     }
 
     /* Галерея для мобильных устройств */
-    .gallery-container {
+   /* Для мобильных устройств */
+@media (max-width: 768px) {
+ /* Стили для мобильных устройств */
+
+  .gallery-container {
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0; /* Убираем лишние отступы */
+    padding: 0;
   }
 
   .gallery-wrapper {
@@ -742,20 +746,23 @@ p.subtitle-section {
     transition: transform 0.5s ease;
     width: 100%; /* Ширина на весь экран */
     justify-content: center;
-    transform: translateX(-2%); /* Смещаем изображения немного влево */
   }
 
   .gallery-item {
     flex: 0 0 100%; /* Каждый элемент занимает 100% ширины */
-    display: flex;
+    display: none; /* Скрываем все элементы */
     justify-content: center;
     align-items: center;
     text-align: center;
     position: relative;
   }
 
+  .gallery-item.active {
+    display: flex; /* Показываем только активное изображение */
+  }
+
   .gallery-item img {
-    max-width: 100%; /* Устанавливаем ширину для изображения */
+    max-width: 100%; /* Ширина для изображения */
     height: auto;
     object-fit: contain; /* Отключаем растягивание изображений */
   }
@@ -769,10 +776,10 @@ p.subtitle-section {
     color: #fff;
     padding: 10px;
     text-align: center;
-    font-size: 0.8rem; /* Уменьшаем размер шрифта для мобильных устройств */
-    padding: 10px 20px; /* Добавляем отступы, чтобы текст не обрезался */
-    padding-right: 40px; /* Дополнительный отступ справа */
+    font-size: 0.8rem; /* Уменьшенный размер шрифта для мобильных устройств */
   }
+}
+
 
     /* Секции с заголовками */
     section h2 {
@@ -1116,59 +1123,80 @@ p.subtitle-section {
 </section>
 
   <script>
-    const galleryWrapper = document.querySelector('.gallery-wrapper');
-    let galleryIndex = 0;
-    const galleryItems = document.querySelectorAll('.gallery-item');
-    const containerWidth = document.querySelector('.gallery-container').offsetWidth;
+// Получаем элементы галереи
+const galleryWrapper = document.querySelector('.gallery-wrapper');
+let galleryIndex = 0;
+const galleryItems = document.querySelectorAll('.gallery-item');
+let containerWidth = document.querySelector('.gallery-container').offsetWidth;
 
-    function moveGallery(step) {
-      galleryIndex = (galleryIndex + step + galleryItems.length) % galleryItems.length;
-      const itemWidth = galleryItems[0].clientWidth + 20; // Учитываем отступ между элементами
-      const offset = -galleryIndex * itemWidth + (containerWidth - itemWidth) / 2; // Центрируем первый элемент
-      galleryWrapper.style.transform = `translateX(${offset}px)`;
+// Функция для перемещения галереи
+function moveGallery(step = 0) {
+    galleryIndex = (galleryIndex + step + galleryItems.length) % galleryItems.length;
 
-      galleryItems.forEach((item, index) => {
+    // Обрабатываем показ активного изображения и размытие для десктопов
+    galleryItems.forEach((item, index) => {
         if (index === galleryIndex) {
-          item.classList.remove('blur'); // Убираем размытие для активного элемента
+            item.classList.add('active'); // Показываем активный элемент
+            item.classList.remove('blur'); // Убираем размытие для активного
         } else {
-          item.classList.add('blur'); // Добавляем размытие для остальных
+            item.classList.remove('active'); // Скрываем остальные элементы для мобильных
+            if (window.innerWidth > 768) {
+                item.classList.add('blur'); // Добавляем размытие для неактивных элементов на десктопе
+            }
         }
-      });
+    });
+
+    // Перемещение галереи на десктопе
+    if (window.innerWidth > 768) {
+        const itemWidth = galleryItems[0].clientWidth + 20; // Учитываем отступы на десктопе
+        const offset = -galleryIndex * itemWidth + (containerWidth - itemWidth) / 2; // Центрируем активное изображение
+        galleryWrapper.style.transform = `translateX(${offset}px)`;
     }
+}
 
-    // Автоматическая прокрутка
-    setInterval(() => {
-      moveGallery(1);
-    }, 7000);
+// Инициализация галереи при загрузке страницы
+window.addEventListener('load', () => {
+    setTimeout(() => {
+        moveGallery(0); // Центрируем галерею
+    }, 100); // Добавляем небольшую задержку, чтобы обеспечить корректные расчеты размеров элементов
+});
 
-    // Инициализация позиции для первого изображения
-    window.addEventListener('load', () => {
-      moveGallery(0);
-    });
+// Перемещение галереи через каждые 7 секунд
+setInterval(() => {
+    moveGallery(1);
+}, 7000);
 
-    const orderBtn = document.getElementById('order-btn');
-    const modal = document.getElementById('modal');
-    const closeModal = document.getElementById('close-modal');
+// Обработка изменения размеров окна (для обеспечения адаптивности)
+window.addEventListener('resize', () => {
+    containerWidth = document.querySelector('.gallery-container').offsetWidth;
+    moveGallery(0); // Пересчитываем позицию при изменении ширины окна
+});
 
-    // Открытие модального окна
-    orderBtn.addEventListener('click', (e) => {
-      e.preventDefault();
-      modal.style.display = 'flex';
-    });
+// Открытие и закрытие модального окна
+const orderBtn = document.getElementById('order-btn');
+const modal = document.getElementById('modal');
+const closeModal = document.getElementById('close-modal');
 
-    // Закрытие модального окна
-    closeModal.addEventListener('click', () => {
-      modal.style.display = 'none';
-    });
+// Открытие модального окна
+orderBtn.addEventListener('click', (e) => {
+    e.preventDefault();
+    modal.style.display = 'flex';
+});
 
-    // Закрытие модального окна при клике вне формы
-    window.addEventListener('click', (e) => {
-      if (e.target == modal) {
+// Закрытие модального окна
+closeModal.addEventListener('click', () => {
+    modal.style.display = 'none';
+});
+
+// Закрытие модального окна при клике вне его содержимого
+window.addEventListener('click', (e) => {
+    if (e.target == modal) {
         modal.style.display = 'none';
-      }
-    });
+    }
+});
 
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+// Плавная прокрутка по якорным ссылкам
+document.querySelectorAll('a[href^="#"]').forEach(anchor => {
     anchor.addEventListener('click', function (e) {
         e.preventDefault();
 
@@ -1178,17 +1206,19 @@ p.subtitle-section {
     });
 });
 
+// Логика для бургер-меню
 const burgerMenu = document.getElementById('burger-menu');
 const nav = document.querySelector('header nav ul');
 
-// Логика для показа меню
+// Показ/скрытие меню при клике на бургер-меню
 burgerMenu.addEventListener('click', () => {
     if (nav.classList.contains('show')) {
-        nav.classList.remove('show'); // Если меню открыто, скрываем
+        nav.classList.remove('show'); // Скрываем меню
     } else {
         nav.classList.add('show'); // Показываем меню
     }
 });
+
   </script>
 </body>
 
