--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@ header, footer, section {
 
   <section id="about">
     <h2 class="title-section">Как работает WineLock?</h2>
-    <p class="subtitle-section">WineLock - это аэрозольный баллон с аргоном, который защищает вино от окисления, создавая невидимый барьер между вином и воздухом.</p>
+    <p class="subtitle-section">WineLock - это аэрозольный баллон, который защищает вино от окисления, создавая невидимый барьер между вином и воздухом.</p>
     <div class="gallery-container">
       <div class="gallery-wrapper">
         <div class="gallery-item">
@@ -1081,7 +1081,7 @@ header, footer, section {
         <div class="gallery-item">
           <img src="3.jpg" alt="Изображение 3">
           <div class="gallery-item-text">
-            <h3>Распылите аргон</h3>
+            <h3>Распылите газ</h3>
             <p>Нажмите на баллон и распылите газ в бутылку в течение нескольких секунд.</p>
           </div>
         </div>
@@ -1105,7 +1105,7 @@ header, footer, section {
         <div class="spec-item">
           <div class="spec-text">
             <h3>Тип газа</h3>
-            <p>Аргон (чистота 99.99%)</p>
+            <p>Пищевая смесь (чистота 99.99%)</p>
           </div>
           <div class="spec-number">01</div>
         </div>
